k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-escolar
  namespace: gestao-escolar
  labels:
    app: api-escolar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-escolar
  template:
    metadata:
      labels:
        app: api-escolar
    spec:
      containers:
      - name: api-escolar
        image: caio10/api-escolar:26e044bbb4372b2a7b67ba9e5048c8bb40a6c8a0
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: database-storage
          mountPath: /app/db
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: database-storage
        persistentVolumeClaim:
          claimName: api-escolar-pvc
